# enterprise-langgraph-ops-demo

./: README.md  docker-compose.yml
k8s/: README.md  orchestrator-deploy.yaml  spring-deploy.yaml
orchestrator/: Dockerfile  pyproject.toml
orchestrator/app/: edits.py  graph.py  main.py  metrics.py  policy.py  state.py  storage.py
orchestrator/app/adapters/: datadog_mock.py  git_stub.py  k8s_mock.py  sql_mock.py  ticketing_stub.py
orchestrator/app/nodes/: approval.py  comms.py  diagnose.py  evidence.py  intake.py  plan.py
orchestrator/app/policies/: policy.yml
spring-service/: Dockerfile  pom.xml
spring-service/src/main/java/demo/: Application.java  DemoController.java
spring-service/src/main/resources/: application.yml
