[project]
name = "orchestrator"
version = "0.1.0"
description = "Enterprise Ops Copilot with Guardrails (LangGraph demo)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.1",
  "prometheus-client>=0.20.0",
  "PyYAML>=6.0.1",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "psycopg[binary]>=3.1.18",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "ruff>=0.6.0"]
